# lego-inventory

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  aggregated_inventory.json  billy-fitting.py  container_plan.md  grid_results.csv  inventory.md  lego_inventory.md  lego_inventory.py  lego_sorter.py  part_dimensions.json  purchase-order.md  pyproject.toml  racks_compare.csv  requirements.txt  sample_aggregated_inventory.json  sample_storage_system.yaml  sets_sample.txt  sorter_progress.json  storage_system.yaml  storage_trofast.yaml  trofast-fitting.py
tests/: conftest.py  test_parsers_and_packing.py
